# opengl-grafika

./: .gitignore  CMakeLists.txt  main.cpp
